@@ -2,6 +2,8 @@ Sun Mar  5 12:46:27 EST 2006
 
 	Fix range of %p
 
+	Allow setting of foreground and background colors.
+
 Sat Mar  4 21:59:22 EST 2006
 
 	Highlight python docstrings the same as regular strings.
